--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
     }
 }
 
+// TODO можно сделать buildSrc для хранения зависимостей, что будет куда удобнее и универсальней
 dependencies {
     implementation project(":domain")
     implementation project(":data")
